# cookiecutter_exercise

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: exercise_1.rst  modules.rst
exercise_1/: exercise_1.py
tests/: test_exercise_1.py
