[tool.poetry]
name = "exercise_1"
version = "0.1.0"
description = "Python Package created using cookiecutter and poetry"
authors = ["Karanpal Singh <karanpal.singh@alumni.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
